# Tracking_on_ros

./: README.md
iarc_msgs/: CMakeLists.txt  package.xml
iarc_msgs/msg/: Command.msg  GetData.msg  MissionState.msg  Pose.msg  Pwm.msg  QRCode.msg  QRMatrix.msg  QuadState.msg  QuadVelocity.msg  RoiPos.msg  Start_Cure.msg  Start_QRScan.msg
iarc_msgs/srv/: HandSignal.srv  SendCommand.srv  SendPose.srv  SendQRCode.srv  SendQRMatrix.srv  StartCure.srv
tracking/: CMakeLists.txt  package.xml
tracking/include/: tracking_test.h
tracking/launch/: tracking_melon.launch  xk_posctr_apriltag.launch
tracking/src/: compare_pic.py  cos_sim.py  tracking_main.cpp  tracking_test.cpp
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
video_pub/: CMakeLists.txt  package.xml
video_pub/launch/: video_pub.launch
video_pub/src/: video_pub.cpp
