<?xml version="1.0"?>
<package format="2">
  <name>tracking</name>
  <version>0.0.0</version>
  <description>The xbee_contact package</description>

  <maintainer email="guojiaxin@todo.todo">guojiaxin</maintainer>

 <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>serial</build_export_depend>


  <export>
 
  </export>
</package>

